PPC64 (part 214): linux: extend signal handler to catch SIGTRAP on ppc64.

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • port-stage-ppc-aix
    • Affects Version/s: port-stage-ppc-aix
    • Component/s: hotspot
    • None

        PPC has a compare-and-trap instruction that is used for NullChecks and RangeChecks.
        If a check fails, SIGTRAP is raised and must be handled by the signal handler of the VM.
        Add support for handling SIGTRAP on PPC64 to linux.

        ----------------------------

        This is preparation for PPC64 integration: http://openjdk.java.net/jeps/175
        This and following ppc64 changes will go into staging repository first and tested there: http://hg.openjdk.java.net/ppc-aix-port/stage/

        http://hg.openjdk.java.net/ppc-aix-port/jdk8/hotspot/file/338e318f1e12/ppc_patches/0214_linux-Extend_signal_handler_to_catch_SIGTRAP_on_ppc.patch

              Assignee:
              Goetz Lindenmaier
              Reporter:
              Goetz Lindenmaier
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: