8028470: PPC64 (part 214): linux: extend signal handler to catch SIGTRAP on ppc64

Reviewed-by: kvn